# modulo_1

./: Ejercicio_10.py  Ejercicio_7.py  Ejercicio_8.py  Ejercicio_9.py  Ejercicio__6.py  ejercicio_1.py  ejercicio_11.py  ejercicio_12.py  ejercicio_13.py  ejercicio_14.py  ejercicio_15.py  ejercicio_2.py  ejercicio_3.py  ejercicio_4.py  ejercicio_5.py  pyproject.toml
